# scrapey-mcscrapeface

./: README.md  pyproject.toml
src/scrapey/: analytics.py  cli.py  display.py  parser.py  scraper.py
