[project]
name = "scrapey"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.44",
  "playwright-stealth>=1.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "rich>=13.7",
  "click>=8.1",
]

[project.scripts]
scrapey = "scrapey.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
